--- a/task-manager/Vagrantfile
+++ b/task-manager/Vagrantfile
@@ -28,11 +28,12 @@ Vagrant.configure("2") do |config|
     # Clonar el repositorio desde GitHub
     git clone https://github.com/L-DevOps-01/11640-TASK-MANAGER.git /home/vagrant/app
 
+
     # Moverse al directorio de la app
     cd /home/vagrant/app
 
     # Construir y ejecutar el contenedor con Docker
-    sudo docker build -t mi_app .
-    sudo docker run -d -p 3000:3000 mi_app
+    sudo docker build -t task-manager .
+    sudo docker run -d -p 3000:3000 task-manager
   SHELL
 end
