--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "react-hot-toast": "^2.5.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.26.5",
